--- a/package.json
+++ b/package.json
@@ -12,21 +12,26 @@
     "@hookform/resolvers": "^3.10.0",
     "@supabase/supabase-js": "^2.80.0",
     "@tiptap/extension-image": "^2.1.0",
+    "@tiptap/extension-link": "^2.27.1",
     "@tiptap/extension-text-align": "^2.1.0",
+    "@tiptap/extension-youtube": "^2.27.1",
     "@tiptap/pm": "^2.1.0",
     "@tiptap/react": "^2.1.0",
     "@tiptap/starter-kit": "^2.1.0",
+    "@types/turndown": "^5.0.6",
     "axios": "^1.6.5",
     "bcryptjs": "^3.0.3",
     "clsx": "^2.1.0",
     "googleapis": "^144.0.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.460.0",
+    "marked": "^17.0.1",
     "next": "^14.2.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "react-hook-form": "^7.53.0",
     "tailwind-merge": "^2.5.0",
+    "turndown": "^7.2.2",
     "zod": "^3.23.0",
     "zustand": "^4.5.0"
   },
